--- a/AwesomeBooks/package.json
+++ b/AwesomeBooks/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@auth0/auth0-angular": "^1.8.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "popper": "^1.0.1",
