--- a/AwesomeBooks/package.json
+++ b/AwesomeBooks/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.2.0",
     "@auth0/auth0-angular": "^1.8.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.1",
     "jquery": "^3.6.0",
     "popper": "^1.0.1",
     "rxjs": "~6.6.0",
